--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 <p>test</p>
-<button onclick="test()">Button</button>
+
+<form>
+    <label>
+        <input name="username">
+        <input name="userpassword">
+        <button type="button" onclick="login()">Button</button>
+    </label>
+</form>
+<!--<button onclick="test()">Button</button>-->
 <script src="index.js"></script>
 </body>
 </html>
