--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 <p>test</p>
 
-<form>
+<form name="userForm">
     <label>
-        <input name="username">
-        <input name="userpassword">
+        <input name="username" id="username" class="username" placeholder="username">
+        <!--<input name="username" class="username" placeholder="username2">-->
+        <input name="userpassword" placeholder="userpassword">
         <button type="button" onclick="login()">Button</button>
     </label>
 </form>
